--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
       </td>
     </tr>
   </table>
+	<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=_BpUPimdxgN-HK21N7hmIkwjFxyTre7uv68UrYPAd3s&cl=ffffff&w=a"></script>
 </body>
 
 </html>
